##########################
# Setup.py Configuration #
##########################
[metadata]
name = pathway-forte
version = 0.0.2
description = A Python package for comparing the effect of pathway database choice in functional enrichment and classification methods
long_description = file: README.rst

url = https://github.com/pathwayforte
download_url = https://github.com/pathwayforte/pathway-forte
project_urls =
    Bug Tracker = https://github.com/pathwayforte/pathway-forte/issues
    Source Code = https://github.com/pathwayforte/pathway-forte
    Documentation = https://pathway_forte.readthedocs.io

# Author information
author = Sarah Mubeen and Daniel Domingo-Fernández
author_email = danieldomingofernandez@hotmail.com
maintainer = Daniel Domingo-Fernández
maintainer_email = danieldomingofernandez@hotmail.com

# License Information
license = Apache 2.0 License
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics

keywords =
    Pathway Databases
    Systems Biology
    Networks Biology
    Pathway Enrichment
    Machine Learning

[options]
install_requires =
    scikit-learn==0.20.2
    pandas==0.23.4
    tqdm
    numpy==1.16.0
    gseapy
    click
    seaborn
    joblib
    scikit-survival==0.7
    bio2bel_reactome
    bio2bel_kegg
    bio2bel_wikipathways
    statsmodels

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    pathway_forte = pathway_forte.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = pathway_forte

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
